# portal2-cm-boards-v2

./: .gitattributes  .gitignore  .gitignore.swp  Dockerfile.db  Dockerfile.dbmate  Dockerfile.server  README.md  docker-compose.yaml  setup.instructions  xs
backend/: Cargo.toml  README.md
backend/cache/: 45467.cache  46362.cache  47106.cache  47452.cache  47455.cache  47456.cache  47458.cache  47465.cache  47468.cache  47469.cache  47472.cache  47735.cache  47736.cache  47738.cache  47741.cache  47742.cache  47744.cache  47746.cache  47748.cache  47751.cache  47752.cache  47755.cache  47756.cache  47759.cache  47760.cache  47763.cache  47764.cache  47766.cache  47768.cache  47770.cache  47773.cache  47774.cache  47776.cache  47779.cache  47780.cache  47783.cache  47784.cache  47787.cache  47791.cache  47793.cache  (+59 more)
backend/migrations/2021-02-25-195703_initialize/: down.sql  up.sql
backend/migrations/2021-02-25-202037_initialize/: down.sql
backend/src/: backup.rs  backupmodels.rs  main.rs  models  models.rs  points.rs  recent_check.txt  schema.rs
backend/src/cache/: 47106.cache  47452.cache  47455.cache  47456.cache  47458.cache  47465.cache  47468.cache  47469.cache  47472.cache  47735.cache  47736.cache  47738.cache  47742.cache  47744.cache  47746.cache  47748.cache  47751.cache  47752.cache  47755.cache  47756.cache  47759.cache  47760.cache  47763.cache  47764.cache  47766.cache  47768.cache  47770.cache  47773.cache  47774.cache  47776.cache  47779.cache  47780.cache  47783.cache  47784.cache  47787.cache  47791.cache  47793.cache  47795.cache  47798.cache  47800.cache  (+11 more)
backend/src/models/: datamodels.rs  mod.rs  schema.rs
backend/src/stages/: exporting.rs  fetching.rs  fetching_coop.rs  fetching_sp.rs  mod.rs  uploading.rs  uploading_coop.rs  uploading_sp.rs
backend/src/tests/: fetching_tests.rs  mod.rs  points_tests.rs  steam_api_tests.rs
backend/src/tests/examples/: banned_example.json  coop_ranked_example.json  sp_ranked_example.json
server/: .env.docker  .env.entrypoint.dev  .env.example  .env.server.dev  Cargo.toml  Dockerfile  demo  demo.dem  server-entrypoint.sh
server/api/: vaultentrance.json
server/api/maps/coop/: 45467.json  46362.json  47825.json  47829.json  47831.json  47835.json  47837.json  47841.json  47845.json  47849.json  48287.json  49343.json  49345.json  49347.json  49351.json  52667.json  52671.json  52689.json  52691.json  52694.json  52711.json  52715.json  52717.json  52777.json
server/api/maps/sp/: 47458.json  47468.json  47472.json  47738.json  47742.json  47746.json  47755.json  47766.json  47779.json  47787.json  47791.json  47804.json  47811.json  47819.json  62759.json  62765.json
server/api/v1/: mod.rs
server/api/v1/handlers/: changelog.rs  coop.rs  mod.rs  sp.rs
server/container-volume/: Cargo.toml
server/container-volume/src/tools/: datamodels.rs
server/dump/maps/coop/: 47828.json  47833.json  47840.json  47844.json  47848.json  47854.json  47856.json  47858.json  47861.json  49341.json  49349.json  52642.json  52660.json  52662.json  52663.json  52665.json  52687.json  52714.json  52735.json  52738.json  52740.json  52757.json  52759.json
server/dump/maps/sp/: 47106.json  47452.json  47455.json  47456.json  47465.json  47469.json  47735.json  47752.json  47756.json  47759.json  47760.json  47764.json  47770.json  47776.json  47780.json  47783.json  47784.json  47793.json  47795.json  47798.json  47800.json  47802.json  47806.json  47808.json  47815.json  47817.json  47821.json  47824.json  62758.json  (+2 more)
server/points/: coop.json  sp.json
server/src/: _handlers.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs  schema.rs  structs.rs
server/src/api/: mod.rs
server/src/controllers/: admin.rs  changelog.rs  chapters.rs  controllers.rs  coop.rs  demos.rs  maps.rs  mod.rs  models.rs  sp.rs  stats.rs  users.rs
server/src/models/: admin.rs  changelog.rs  chapters.rs  coop.rs  demo.rs  demos.rs  maps.rs  mod.rs  models.rs  points.rs  sp.rs  stats.rs  users.rs
server/src/tests/: db_tests.rs  mod.rs
server/src/tools/: cache.rs  calc.rs  config.rs  dataimpls.rs  datamodels.rs  error.rs  helpers.rs  mod.rs  models.rs  schema.rs
server/templates/: index.html
(+174 files in other folders)
