[package]
name = "backend"
version = "0.1.0"
authors = ["DanielBatesJ <DanielBatesJ@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.19"