[package]
name = "backend"
version = "0.1.0"
authors = ["DanielBatesJ <DanielBatesJ@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }

serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.64"
serde-xml-rs = "0.4.1"
log = "0.4.14"
time = "*" 

rayon = "1.5.0"

#diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
#text-diff = "0.4.0"
#[dependencies.text_diff]
#git = "https://github.com/johannhof/text-diff.rs.git"