[package]
name = "server"
version = "0.5.0"
authors = ["Daniel Bates <36864021+DanielBatesJ@users.noreply.github.com>"]
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
futures = "0.3.31"
reqwest = { version = "=0.12.12", features = ["json", "stream"] }
tokio = { version = "=1.43.0", features = ["full"] }
sqlx = { version = "=0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "macros",
] }
chrono = { version = "=0.4.39", features = ["serde"] }
serde = "1.0.217"
serde_json = "1.0.138"
serde_derive = "1.0.217"

dotenv = "=0.15.0"
config = "=0.11.0"
num = "=0.4.3"
env_logger = "=0.11.6"
log = "=0.4.25"
anyhow = "=1.0.95"
sanitize-filename = "=0.6.0"

#steam-auth = "1.0.0"
